Bug 419595 - 6abd23ed0220b14a4a05fa280869ba3c953565e3 makes KWin crash in KWin::Cursor::pos()
Summary: 6abd23ed0220b14a4a05fa280869ba3c953565e3 makes KWin crash in KWin::Cursor::pos()
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-03 16:12 UTC by Nate Graham
Modified: 2020-04-03 18:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Full backtrace (7.00 KB, text/x-log)
2020-04-03 16:12 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2020-04-03 16:12:14 UTC
Created attachment 127242 [details]
Full backtrace

With everything built from source, https://cgit.kde.org/kwin.git/commit/?id=6abd23ed0220b14a4a05fa280869ba3c953565e3 causes KWin to reproducibly crash on launch for me. A full backtrace is attached, and the relevant bits are included below. If I revert that commit, it stops crashing. As it happens, I did a clean build of the entire KDE software stack this morning, so it's not an issue of an outdated build directory somewhere in the stack.

#0  0x00007ffff7d7b420 in KWin::Cursor::pos() (this=0x0)
    at /home/nate/kde/src/kwin/cursor.cpp:164
#1  0x00007ffff7e3dff8 in KWin::Screens::current() const (this=0x56acc0)
    at /home/nate/kde/src/kwin/cursor.h:269
#2  0x00007ffff7dc628c in KWin::FocusChain::getForActivation(unsigned int) const
    (this=0x6d9270, desktop=desktop@entry=1) at /home/nate/kde/src/kwin/screens.h:241
#3  0x00007ffff7e9c56a in KWin::Workspace::findClientToActivateOnDesktop(unsigned int)
    (this=0x5e3ab0, desktop=1) at /home/nate/kde/src/kwin/focuschain.h:224
#4  0x00007ffff7e9c765 in KWin::Workspace::activateClientOnNewDesktop(unsigned int) (
    this=this@entry=0x5e3ab0, desktop=desktop@entry=1)
    at /home/nate/kde/src/kwin/workspace.cpp:971
#5  0x00007ffff7e9eb04 in KWin::Workspace::slotCurrentDesktopChanged(unsigned int, unsigned int) (this=0x5e3ab0, oldDesktop=0, newDesktop=1)
Comment 1 Aleix Pol 2020-04-03 16:21:11 UTC
I'll look into it. Do you always get the crash? Is it just when starting?
Comment 2 Nate Graham 2020-04-03 16:24:45 UTC
I always get the crash. By "on launch" I mean, "when I run `kwin_x11`, not "when I start up the computer".
Comment 3 Aleix Pol 2020-04-03 18:02:26 UTC
Git commit 77782efc1fa4d59232bee08143c74a29f27d0c6f by Aleix Pol.
Committed on 03/04/2020 at 18:01.
Pushed by apol into branch 'master'.

x11: register the cursor as well
CCMAIL: kwin@kde.org

Committing as is because it crashes on load

M  +1    -0    plugins/platforms/x11/standalone/x11cursor.cpp

https://commits.kde.org/kwin/77782efc1fa4d59232bee08143c74a29f27d0c6f