x11: register the cursor as well

BUG: 419595
CCMAIL: kwin@kde.org

Committing as is because it crashes on load