plugins/platforms/x11/standalone/x11cursor.cpp
@@ -41,6 +41,7 @@ X11Cursor::X11Cursor(QObject *parent, bool xInputSupport)
     , m_hasXInput(xInputSupport)
     , m_needsPoll(false)
 {
+    Cursors::self()->setMouse(this);
     m_resetTimeStampTimer->setSingleShot(true);
     connect(m_resetTimeStampTimer, SIGNAL(timeout()), SLOT(resetTimeStamp()));
     // TODO: How often do we really need to poll?
